--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "@fortawesome/angular-fontawesome": "^0.3.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.10",
+    "@fortawesome/free-solid-svg-icons": "^5.6.1",
     "@ng-bootstrap/ng-bootstrap": "^4.0.1",
     "@types/es6-promise": "^3.3.0",
+    "add": "^2.0.6",
     "core-js": "^2.5.4",
+    "npm": "^6.5.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
