--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.0.0-beta.5",
+    "@agm/snazzy-info-window": "^1.0.0-beta.5",
     "@angular-devkit/schematics": "^7.1.3",
     "@angular/animations": "~7.1.0",
     "@angular/common": "~7.1.0",
@@ -30,6 +31,7 @@
     "core-js": "^2.5.4",
     "npm": "^6.5.0",
     "rxjs": "~6.3.3",
+    "snazzy-info-window": "^1.1.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
